# itahppens_bot

./: .gitignore  README.md  Taskfile.yaml  docker-compose.yml  pyproject.toml
app/: __main__.py  bot.py  text.py
app/core/: config.py
app/quotes_client/: http_client.py
docker/: Dockerfile  prod.env.example
src/: docker-compose.yml  pyproject.toml
src/bot/: bot.py  main.py  text.py
src/bot/core/: config.py
src/bot/quotes_client/: http_client.py  interface.py
src/docker/: Dockerfile
