[tool.poetry]
name = "ithappens_bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.4"
pydantic = {extras = ["dotenv"], version = "^2.0.0"}
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
